--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "@paypal/react-paypal-js": "^8.1.1",
+    "@tanstack/react-query": "^4.29.7",
+    "jwt-decode": "^3.1.2",
+    "prettier": "^3.0.0",
+    "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.2",
+    "zustand": "^4.3.8",
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +36,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.0.0-canary-5dd35968b-20231201",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
