--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -17,17 +16,17 @@
     "@heroicons/react": "^2.0.18",
     "@paypal/react-paypal-js": "^8.1.1",
     "@tanstack/react-query": "^4.29.7",
+    "axios": "^1.6.0",
     "jwt-decode": "^3.1.2",
     "prettier": "^3.0.0",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.5.2",
-    "zustand": "^4.3.8",
-    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.17.0"
+    "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-router-dom": "^6.17.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -38,8 +37,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^5.0.0-canary-5dd35968b-20231201",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.4.5"
   }
 }
